Client: Remove UrlLabel dependency on Applet
Url opening with Desktop.browse()